[gd_scene load_steps=3 format=3 uid="uid://ymbb7ntasi2t"]

[ext_resource type="Script" uid="uid://bwrbe5ttv1gy2" path="res://Scripts/settings_menu.gd" id="1_8ef0u"]
[ext_resource type="FontFile" uid="uid://c2nvekmrvmbwg" path="res://Assets/Fonts/Daydream DEMO.otf" id="2_437ti"]

[node name="SettingsMenu" type="Node2D"]
script = ExtResource("1_8ef0u")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ButtonContainer" type="VBoxContainer" parent="CanvasLayer"]
layout_direction = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -220.0
offset_right = 220.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64
alignment = 1

[node name="VolumeButton" type="Button" parent="CanvasLayer/ButtonContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_outline_color = Color(0, 0.2765172, 0.5450768, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_437ti")
theme_override_font_sizes/font_size = 64
text = "Volume
"
flat = true

[node name="ControlsButton" type="Button" parent="CanvasLayer/ButtonContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_outline_color = Color(0, 0.2765172, 0.5450768, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_437ti")
theme_override_font_sizes/font_size = 64
text = "Controls"
flat = true

[node name="BackButton" type="Button" parent="CanvasLayer/ButtonContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_outline_color = Color(0, 0.2765172, 0.5450768, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_437ti")
theme_override_font_sizes/font_size = 64
text = "Back"
flat = true

[connection signal="pressed" from="CanvasLayer/ButtonContainer/VolumeButton" to="." method="_on_volume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
